# cpp_experiments

./: CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  README_docker.md  gcovr.cfg
.github/: constants.env
.github/workflows/: ci.yml
benchmark/: bench_objectpool.cpp
benchmarks/: CMakeLists.txt  bench_objectpool.cpp
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/apps/: parallel_word_counter.h
include/messagequeue/: message.h  message_queue.h
include/objectpool/: objectpool.h
include/threadpool/: threadpool.h
include/threadsafequeue/: thread_safe_queue.h
scripts/: build.sh  clean.sh  test.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  messagequeue_main.cpp  parallel_word_counter.cpp  threadpool_main.cpp  threadsafequeue_main.cpp
src/lib/: CMakeLists.txt
src/lib/messagequeue/: CMakeLists.txt  message_queue.cpp
src/lib/objectpool/: CMakeLists.txt  objectpool.cpp
src/lib/threadpool/: CMakeLists.txt  threadpool.cpp
src/lib/threadsafequeue/: CMakeLists.txt
src/messagequeue/: CMakeLists.txt  message_queue.cpp
src/threadpool/: CMakeLists.txt  main.cpp  threadpool.cpp
src/threadsafequeue/: CMakeLists.txt  main.cpp  thread_safe_queue.cpp
test/: CMakeLists.txt  test_messagequeue.cpp  test_threadsafequeue.cpp
tests/: CMakeLists.txt  test_messagequeue.cpp  test_objectpool.cpp  test_threadsafequeue.cpp  tests.cpp
